[package]
name = "pomodoro-perron"
version = "1.0.0"
description = "A Tauri Pomodoro Program"
authors = ["ichi0915"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.2", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.2", features = [] }
tauri-plugin-shell = "2.0.0-beta.2"
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
